[tool.poetry]
name = "adversarial-validation-demo"
version = "0.1.0"
description = "A nit demonstration of the adversarial validation concept."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

ipywidgets = "~8.0.7"
matplotlib = "~3.7.2"
notebook = "~6.5.4"
numpy = "~1.25.1"
pandas = "~2.0.3"
scikit-learn = "~1.3.0"
tqdm = "~4.65.0"
xgboost = "~1.7.6"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
